; ModuleID = '/home/carl/AnghaBench/linux/drivers/net/wireless/marvell/mwifiex/extr_sdio.c_mwifiex_unregister_dev.c'
source_filename = "/home/carl/AnghaBench/linux/drivers/net/wireless/marvell/mwifiex/extr_sdio.c_mwifiex_unregister_dev.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

%struct.mwifiex_adapter = type { %struct.sdio_mmc_card* }
%struct.sdio_mmc_card = type { i32, i32* }

@llvm.used = appending global [1 x i8*] [i8* bitcast (void (%struct.mwifiex_adapter*)* @mwifiex_unregister_dev to i8*)], section "llvm.metadata"

; Function Attrs: noinline nounwind optnone uwtable
define internal void @mwifiex_unregister_dev(%struct.mwifiex_adapter* %0) #0 {
  %2 = alloca %struct.mwifiex_adapter*, align 8
  %3 = alloca %struct.sdio_mmc_card*, align 8
  store %struct.mwifiex_adapter* %0, %struct.mwifiex_adapter** %2, align 8
  %4 = load %struct.mwifiex_adapter*, %struct.mwifiex_adapter** %2, align 8
  %5 = getelementptr inbounds %struct.mwifiex_adapter, %struct.mwifiex_adapter* %4, i32 0, i32 0
  %6 = load %struct.sdio_mmc_card*, %struct.sdio_mmc_card** %5, align 8
  store %struct.sdio_mmc_card* %6, %struct.sdio_mmc_card** %3, align 8
  %7 = load %struct.mwifiex_adapter*, %struct.mwifiex_adapter** %2, align 8
  %8 = getelementptr inbounds %struct.mwifiex_adapter, %struct.mwifiex_adapter* %7, i32 0, i32 0
  %9 = load %struct.sdio_mmc_card*, %struct.sdio_mmc_card** %8, align 8
  %10 = icmp ne %struct.sdio_mmc_card* %9, null
  br i1 %10, label %11, label %26

11:                                               ; preds = %1
  %12 = load %struct.sdio_mmc_card*, %struct.sdio_mmc_card** %3, align 8
  %13 = getelementptr inbounds %struct.sdio_mmc_card, %struct.sdio_mmc_card* %12, i32 0, i32 1
  store i32* null, i32** %13, align 8
  %14 = load %struct.sdio_mmc_card*, %struct.sdio_mmc_card** %3, align 8
  %15 = getelementptr inbounds %struct.sdio_mmc_card, %struct.sdio_mmc_card* %14, i32 0, i32 0
  %16 = load i32, i32* %15, align 8
  %17 = call i32 @sdio_claim_host(i32 %16)
  %18 = load %struct.sdio_mmc_card*, %struct.sdio_mmc_card** %3, align 8
  %19 = getelementptr inbounds %struct.sdio_mmc_card, %struct.sdio_mmc_card* %18, i32 0, i32 0
  %20 = load i32, i32* %19, align 8
  %21 = call i32 @sdio_disable_func(i32 %20)
  %22 = load %struct.sdio_mmc_card*, %struct.sdio_mmc_card** %3, align 8
  %23 = getelementptr inbounds %struct.sdio_mmc_card, %struct.sdio_mmc_card* %22, i32 0, i32 0
  %24 = load i32, i32* %23, align 8
  %25 = call i32 @sdio_release_host(i32 %24)
  br label %26

26:                                               ; preds = %11, %1
  ret void
}

declare dso_local i32 @sdio_claim_host(i32) #1

declare dso_local i32 @sdio_disable_func(i32) #1

declare dso_local i32 @sdio_release_host(i32) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
